# cal_agent

./: .gitignore  .pre-commit-config.yaml  Function calling coding challenge.md  README.md  docker-compose.yml  pyproject.toml
chat-ui/: .env  package-lock.json  package.json  tailwind.config.js
chat-ui/src/routes/: +page.svelte
deployment/nginx/: Dockerfile  nginx.conf
deployment/rest_server/: Dockerfile
lib/core/: __init__.py  cal_client.py  chat_agent.py  langchain_tools.py  logger.py  openai_client.py
lib/rest_server/: __init__.py  context.py  middlewares.py
rest_server/: __init__.py  import_routes.py  main.py
rest_server/api/chat/: __init__.py  models.py  post_message.py
